Feature: /type get swagger
